--- a/views/image.pug
+++ b/views/image.pug
@@ -1,6 +1,9 @@
 head
   title=videoTitle
   style.
+    body {
+      margin: 0;
+    }
     .fill {
       display: flex;
       justify-content: center;
