--- a/views/video.pug
+++ b/views/video.pug
@@ -1,6 +1,10 @@
 head
   title=videoTitle
   link(href='https://vjs.zencdn.net/7.11.4/video-js.css' rel='stylesheet')
+  style.
+    body {
+      margin: 0;
+    }
 body
   video(
     id='player'
