--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,8 @@
 head
   title Random porn
 body
-  ol
+  h3=`${videoIndexCount} vídeos indexados`
+  h3=`${requestsCount} acessos`
+  ul
     li: a(href='/image') Gerar imagem aleatória
     li: a(href='/video') Gerar vídeo aleatório
