--- a/views/image.pug
+++ b/views/image.pug
@@ -11,5 +11,11 @@ head
       overflow: hidden;
       min-width: 100%;
     }
+
+  script(
+    async
+    src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2942984671666354'
+    crossorigin='anonymous'
+  )
 body
   img.fill(src=posterImage)
