--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,10 @@
 head
   title Random porn
+  script(
+    async
+    src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2942984671666354'
+    crossorigin='anonymous'
+  )
 body
   h3=`${videoIndexCount} vídeos indexados`
   h3=`${requestsCount} acessos`
