--- a/views/video.pug
+++ b/views/video.pug
@@ -36,6 +36,12 @@ head
       background-color: rgba(215, 35, 35, .3);
       transition: background-color .4s ease-out;
     }
+
+  script(
+    async
+    src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2942984671666354'
+    crossorigin='anonymous'
+  )
 body
   input#video-id(type='hidden' value=videoId)
 
