--- a/views/video.pug
+++ b/views/video.pug
@@ -134,3 +134,53 @@ body
 
     document.querySelector('div.grid-item.like').addEventListener('click', like)
     document.querySelector('div.grid-item.dislike').addEventListener('click', dislike)
+
+  script.
+    const checkInterval = 300 // check every 50 ms (do not use lower values)
+    let lastPlayPos = 0
+    let currentPlayPos = 0
+    let lastBufferingTime = 0
+
+    const interval = setInterval(checkBuffering, checkInterval)
+
+    function checkBuffering() {
+      currentPlayPos = player.currentTime()
+
+      // checking offset should be at most the check interval
+      // but allow for some margin
+      const offset = (checkInterval - 20) / 1000
+
+      // if no buffering is currently detected,
+      // and the position does not seem to increase
+      // and the player isn't manually paused...
+      if (
+        lastBufferingTime === 0
+        && currentPlayPos < (lastPlayPos + offset)
+        && !player.paused()
+      ) {
+        lastBufferingTime = Date.now()
+      }
+
+      // if we were buffering but the player has advanced,
+      // then there is no buffering
+      if (
+        lastBufferingTime > 0
+        && currentPlayPos > (lastPlayPos + offset)
+        && !player.paused()
+      ) {
+        lastBufferingTime = 0
+      }
+
+      // more than 8 seconds buffering
+      const fiveSecondsAgo = Date.now() - 8 * 1000
+      if (
+        lastBufferingTime < fiveSecondsAgo
+        && currentPlayPos < (lastPlayPos + offset)
+        && !player.paused()
+      ) {
+        clearInterval(interval)
+        window.location.reload()
+      }
+
+      lastPlayPos = currentPlayPos
+    }
