--- a/views/index.pug
+++ b/views/index.pug
@@ -5,9 +5,58 @@ head
     src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2942984671666354'
     crossorigin='anonymous'
   )
+  style.
+    body {
+      padding: 0;
+      margin: 0;
+    }
+    .grid-container {
+      display: grid;
+      grid-template-columns: auto auto auto;
+      background-color: black;
+      align-items: stretch;
+      padding: 0;
+      margin: 0;
+      width: 100vw;
+      height: 100vh;
+    }
+    .grid-item {
+      align-items: center;
+      display: flex;
+      height: 33vh;
+      width: 33vw;
+    }
+    .fill {
+      min-width: 100%;
+    }
+    .center-block {
+      color: white;
+      text-align: center;
+    }
+    .go-btn {
+      font-size: 30px;
+    }
 body
-  h3=`${videoIndexCount} vídeos indexados`
-  h3=`${requestsCount} acessos`
-  ul
-    li: a(href='/image') Gerar imagem aleatória
-    li: a(href='/video') Gerar vídeo aleatório
+  .grid-container
+    .grid-item
+      //img.fill(src=videos[0] && videos[0].image)
+    .grid-item
+      img.fill(src=videos[1] && videos[1].image)
+    .grid-item
+      //img.fill(src=videos[2] && videos[2].image)
+    .grid-item
+      img.fill(src=videos[3] && videos[3].image)
+    .grid-item
+      div.center-block
+        h2 Random Porn Generator
+        h4=`${summary.videoIndexCount} indexed videos`
+        h4=`${summary.requestsCount} random videos watched`
+        button.go-btn: a(href='/video') Go
+    .grid-item
+      img.fill(src=videos[4] && videos[4].image)
+    .grid-item
+      //img.fill(src=videos[5] && videos[5].image)
+    .grid-item
+      img.fill(src=videos[6] && videos[6].image)
+    .grid-item
+      //img.fill(src=videos[7] && videos[7].image)
