--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,7 @@ head
       display: grid;
       grid-template-columns: auto auto auto;
       background-color: black;
-      align-items: stretch;
+      align-items: center;
       padding: 0;
       margin: 0;
       width: 100vw;
@@ -25,9 +25,12 @@ head
       display: flex;
       height: 33vh;
       width: 33vw;
+      justify-content: center;
     }
     .fill {
       min-width: 100%;
+      max-height: 100%;
+      object-fit: fill;
     }
     .center-block {
       color: white;
